# SpectrumLauncher

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  trigger_release.yml
launcher/: main.cpp
launcher/minecraft/auth/: AccountList.cpp
program_info/: CMakeLists.txt  org.blocovermelho.SpectrumLauncher.desktop.in  org.blocovermelho.SpectrumLauncher.metainfo.xml.in  spectrumlauncher.6.scd  spectrumlauncher.manifest.in  spectrumlauncher.qrc  spectrumlauncher.rc.in
